# BeS-dev-kit

./: .gitignore  README.md  acc-config.cfg  assessment_report.py  features.md  generate-ossp-master-data.py  generate-version-data.py  get-criticality_score-data.py  get-scorecard-data.py  main.sh  ossp_data.json  pyproject.toml  requirements.txt  setup.py  update-version-data.py
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: pylint.yml  python-publish.yml
bes_dev_kit/: __init__.py  __main__.py  cli.py
bes_dev_kit/src/: create_ossp_master.py  create_version_data.py  generate_report.py  risk_assessment.py  validate_report_file.py  validate_version_file.py
bes_dev_kit/src/risk_summary/: License_compliance.py  Sbom_report.py  Scorecard_report.py  Static_code_analysis.py
besecure_developer_toolkit/: __init__.py  cli.py
besecure_developer_toolkit/src/: CreateOsspMaster.py  CreateVersionData.py  GenerateReport.py  License_compliance.py  New_line_char.py  Objective.py  Sbom_report.py  Scorecard_report.py  Static_code_analysis.py  VersionDetailsNameValidation.py  code_test.py  consolidated_assessment_report.py  create_ossp_master.py  create_version_data.py  generate_report.py  validate_report_file.py  validate_version_file.py  vdnc.py
besecure_developer_toolkit/src/risk_summary/: New_line_char.py  Objective.py  Sbom_report.py
docs/: features.md
python/: generate-ossp-master-data.py  generate-version-data.py  get-criticality_score-data.py  get-scorecard-data.py  update-version-data.py
scripts/: main.sh  osspoi-meta-data-generator.sh
src/: generate_report.py
src/codeQL/: codeql_report.py
src/osspoi/: osspoi_master_report.py  version_detail_report.py
tests/: test_metadata.py  test_report.py  test_rnc_validate.py  test_vdnc.py  test_version.py
