[tool.poetry]
name = "besecure-developer-toolkit"
version = "0.0.7"
description = "cli tool for generating metadata and assessment report for [BeSLighthouse](https://github.com/Be-Secure/BeSLighthouse)."
authors = ["asa1997 <arunsureshampadath@gmail.com>"]
readme = "README.md"
packages = [{include = "bes_dev_kit"}]

[tool.poetry.scripts]
bes-dev-kit = "bes_dev_kit.__main__:cli.app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^7.3.0"
requests = "^2.29.0"
reportlab = "^3.6.8"
criticality-score = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

